Update Readme files

--- a/README.wiki
+++ b/README.wiki
@@ -80,3 +80,7 @@ The following parameters can be changed from the command line to customise the s
 --rng_try                   range of translation along y
 --rng_rota                  range of rotation transformation
 </code>
+
+===== Notes =====
+
+On Unix or MacOS, you should install libcairo2 and libcairo2-dev.
